--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav-loader.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+
+
   <!--FAVICON-->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
@@ -42,14 +44,13 @@
       <div class="inner-nav desktop-nav">
         <ul class="clearlist scroll-nav local-scroll">
           <li class="active"><a href="#!/home">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Soaps</a></li>
-          <li><a href="">Body Butters</a></li>
-          <li><a href="">Hotel Collection</a></li>
-          <li><a href="">Shop</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">About</a></li>
+          <li><a href="#!/about">About</a></li>
+          <li><a href="#!/soaps">Soaps</a></li>
+          <li><a href="#!/bodybutters">Body Butters</a></li>
+          <li><a href="#!/hotelcollection">Hotel Collection</a></li>
+          <li><a href="#!/shop">Shop</a></li>
+          <li><a href="#!/contact">Contact Us</a></li>
+          <li><a href="#!/about">About</a></li>
         </ul>
       </div>
     </div>
@@ -67,10 +68,10 @@
 
   <!--reference-->
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>   
-    <script type="text/javascript" src="js/jquery.appear.js"></script>
-        <script type="text/javascript" src="js/jquery.sticky.js"></script>
-        <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
-        <script type="text/javascript" src="js/all.js"></script>
+  <script type="text/javascript" src="js/jquery.appear.js"></script>
+  <script type="text/javascript" src="js/jquery.sticky.js"></script>
+  <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
+  <script type="text/javascript" src="js/all.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
