--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,8 @@
   </div>
 
   <footer>
-    
+    <img class="footer-logo" src="../images/favicon.png" alt="Gajimare">
+    <p>&copy; Gajimare 2017</p>
   </footer>
 
   <!--reference-->
