--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     <div class="full-wrapper relative clearfix">
       <!--LOGO-->
       <div class="nav-logo-wrap local-scroll">
-        <a href="#top" class="logo">
+        <a href="#!/" class="logo">
           <img src="images/logo.png" alt="">
         </a>
       </div>
@@ -50,7 +50,6 @@
           <li><a href="#!/hotelcollection">Hotel Collection</a></li>
           <li><a href="#!/shop">Shop</a></li>
           <li><a href="#!/contact">Contact Us</a></li>
-          <li><a href="#!/about">About</a></li>
         </ul>
       </div>
     </div>
@@ -64,6 +63,7 @@
 
   <footer>
     <img class="footer-logo" src="../images/favicon.png" alt="Gajimare">
+    <br>
     <p>&copy; Gajimare 2017</p>
   </footer>
 
