--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/nav-loader.css">
+  <link rel="stylesheet" href="css/product-detail.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 
 
