added new images, & new page

--- a/client/index.html
+++ b/client/index.html
@@ -10,17 +10,18 @@
   <link rel="stylesheet" href="css/nav-loader.css">
   <link rel="stylesheet" href="css/product-detail.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-
-
-  <!--FAVICON-->
-  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!--LINK TO ANIMATE.CSS-->
   <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
   <!--GOOGLE FONTS-->
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
+  
+  <!--FAVICON-->
+  <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 
 <body class="appear-animate">
@@ -52,6 +53,7 @@
           <li><a href="#!/hotelcollection">Hotel Collection</a></li>
           <li><a href="#!/shop">Shop</a></li>
           <li><a href="#!/contact">Contact Us</a></li>
+          <li><a href="#!/productdetail">Test</a></li>
         </ul>
       </div>
     </div>
