--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" type="" href="css/product-detail.css">
   <link rel="stylesheet" href="css/nav-loader.css">
   <link rel="stylesheet" href="css/product-detail.css">
+  <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  
+  <!--LINK TO FONTAWSOME-->
+  <script src="https://use.fontawesome.com/a6975973c7.js"></script>
 
   <!--LINK TO ANIMATE.CSS-->
   <link rel="stylesheet"
@@ -53,7 +57,7 @@
           <li><a href="#!/hotelcollection">Hotel Collection</a></li>
           <li><a href="#!/shop">Shop</a></li>
           <li><a href="#!/contact">Contact Us</a></li>
-          <li><a href="#!/productdetail">Test</a></li>
+          <li><a href="#!/productdetail">product</a></li>
         </ul>
       </div>
     </div>
